# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "data",
    data = [
        "breast_cancer",
        "perfect_logit",
        "psi",
        "digits",
        "iris",
        "heart",
        "diabetes",
        "1000-100",
        "1000-500",
        "1000-1000",
        "10000-100",
        "10000-500",
        "10000-1000",
        "100000-100",
        "100000-500",
        "100000-1000",
    ],
)

filegroup(
    name = "breast_cancer",
    srcs = [
        "breast_cancer_a.csv",  # from sklearn.dataset load_breast_cancer
        "breast_cancer_b.csv",  # from sklearn.dataset load_breast_cancer
    ],
)

filegroup(
    name = "perfect_logit",
    srcs = [
        "perfect_logit_a.csv",  # generated, perfect linear
        "perfect_logit_b.csv",  # generated, perfect linear
    ],
)

filegroup(
    name = "digits",
    srcs = [
        "digits_a.csv", # from sklearn.dataset load_digits
        "digits_b.csv", # frome sklearn.dataset load_digits
    ],
)
filegroup(
    name = "iris",
    srcs = [
        "iris_a.csv", # from sklearn.dataset load_iris
        "iris_b.csv", # frome sklearn.dataset load_iris
    ],
)

filegroup(
    name = "psi",
    srcs = [
        "psi_1.csv",
        "psi_2.csv",
    ],
)

filegroup(
    name = "heart",
    srcs = [
        "heart_a.csv",
        "heart_b.csv",
    ],
)

filegroup(
    name = "diabetes",
    srcs = [
        "diabetes_a.csv",
        "diabetes_b.csv",
    ],
)

filegroup(
    name = "1000-100",
    srcs = [
        "1000-100_a.csv",
        "1000-100_b.csv",
    ],
)

filegroup(
    name = "1000-500",
    srcs = [
        "1000-500_a.csv",
        "1000-500_b.csv",
    ],
)

filegroup(
    name = "1000-1000",
    srcs = [
        "1000-1000_a.csv",
        "1000-1000_b.csv",
    ],
)

filegroup(
    name = "10000-100",
    srcs = [
        "10000-100_a.csv",
        "10000-100_b.csv",
    ],
)

filegroup(
    name = "10000-500",
    srcs = [
        "10000-500_a.csv",
        "10000-500_b.csv",
    ],
)

filegroup(
    name = "10000-1000",
    srcs = [
        "10000-1000_a.csv",
        "10000-1000_b.csv",
    ],
)

filegroup(
    name = "100000-100",
    srcs = [
        "100000-100_a.csv",
        "100000-100_b.csv",
    ],
)

filegroup(
    name = "100000-500",
    srcs = [
        "100000-500_a.csv",
        "100000-500_b.csv",
    ],
)

filegroup(
    name = "100000-1000",
    srcs = [
        "100000-1000_a.csv",
        "100000-1000_b.csv",
    ],
)

